[gd_scene load_steps=9 format=3 uid="uid://j85wj1ydoba0"]

[ext_resource type="Script" path="res://Scripts/projectile_enemy.gd" id="1_b7bfv"]
[ext_resource type="Texture2D" uid="uid://bw5iluytu3vxi" path="res://Assets/Sprites/placeholder_proj_enemy.png" id="1_x4e78"]
[ext_resource type="PackedScene" uid="uid://ckhsinsgtk3w8" path="res://Scenes/damage_popup.tscn" id="2_0ri2x"]
[ext_resource type="PackedScene" uid="uid://02k7xcui85ns" path="res://Scenes/enemy_projectile.tscn" id="2_jgdrw"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_xillm"]
radius = 11.0
height = 42.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_anerd"]
bg_color = Color(1, 0.0901961, 0.145098, 1)

[sub_resource type="Theme" id="Theme_38aq8"]
HSlider/styles/grabber_area = SubResource("StyleBoxFlat_anerd")

[sub_resource type="ImageTexture" id="ImageTexture_byy0e"]

[node name="projectile_enemy" type="RigidBody2D" node_paths=PackedStringArray("health_bar") groups=["enemy"]]
collision_layer = 6
collision_mask = 6
lock_rotation = true
script = ExtResource("1_b7bfv")
health_bar = NodePath("enemy_ui_elements/health_bar")
damage_number_popup = ExtResource("2_0ri2x")
projectile = ExtResource("2_jgdrw")

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2(1, 0)
shape = SubResource("CapsuleShape2D_xillm")

[node name="sprite" type="Sprite2D" parent="."]
position = Vector2(4, -2)
texture = ExtResource("1_x4e78")

[node name="nav_agent" type="NavigationAgent2D" parent="."]
debug_enabled = true
debug_use_custom = true
debug_path_custom_color = Color(0, 0, 1, 1)

[node name="projectile_cooldown" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="enemy_ui_elements" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -29.0
offset_top = -31.0
offset_right = 31.0
offset_bottom = 22.0

[node name="health_bar" type="HSlider" parent="enemy_ui_elements"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -35.0
offset_top = -8.0
offset_right = 35.0
offset_bottom = 8.0
grow_horizontal = 2
theme = SubResource("Theme_38aq8")
theme_override_icons/grabber_disabled = SubResource("ImageTexture_byy0e")
value = 10.0
editable = false
scrollable = false

[connection signal="enemy_killed" from="." to="." method="_on_enemy_killed"]
[connection signal="timeout" from="projectile_cooldown" to="." method="_on_projectile_cooldown_timeout"]
